# JIukaviyEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  JIukaviyEngine.cpp  JIukaviyEngine.h
Display/: Display.ixx  DisplayManager.ixx  Window.ixx
Editor/: Main.ixx
Engine/: Application.ixx
Tools/: GlmFormatter.ixx  KeyId.ixx  Pointers.ixx  RangeHelpers.ixx  Result.ixx  Variant.ixx
res/shaders/: CMakeLists.txt  shader.vert
src/display/: display.ixx  window.ixx
src/editor/: main.ixx
src/engine/: application.ixx
src/tools/: glm_formatter.ixx  key_id.ixx  pointers.ixx  resource_system.ixx  variant.ixx
